# rz-utils

./: README.md
combo-firmware/: .gitignore  MULTIROOT_GUIDE.md  README.md  SOC_BOARD_ADDITION_GUIDE.md  build_combo.sh  setup_multiroot.sh  unified-bootloader-tool.py  update_serial.py
combo-firmware/config/: combo_layout.toml
local-build-scripts/: README.md  build_atf.sh  build_flash_writer.sh  build_kernel.sh  build_uboot.sh  common.sh  config.ini  main_build.sh
tools/: README.md
tools/binmake/: CMakeLists.txt  README.md  binmake.c  platform_info.json
tools/binmake/include/: json_utils.h  output_utils.h  platform.h  revision.h
tools/binmake/src/: binmake.c  json_utils.c  output_utils.c  revision.c
tools/bpgen/: README.md  bpgen  bpgen.c
universal-scripts/: .gitignore  README.md
universal-scripts/host/tools/: README.md  flash_images.json  requirements.txt  universal_flash.py
universal-scripts/host/tools/bootloader_flasher/: README.md  bootloader_flash.py
universal-scripts/host/tools/config/: README.md  boards_flash_config.toml
universal-scripts/host/tools/firmware_compile/: Readme.md  firmware_compile.py
universal-scripts/host/tools/sd_creator/: README.md  sd_flash.py
universal-scripts/host/tools/uload_bootloader/: README.md  uload_bootloader_flash.py
